--- a/Framework/pom.xml
+++ b/Framework/pom.xml
@@ -13,6 +13,36 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <build>
+   <plugins>
+ 		<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+               <source>${jdk.level}</source>
+               <target>${jdk.level}</target>
+            </configuration>
+         </plugin>
+ 		
+ 		<plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-surefire-plugin</artifactId>
+        	<version>3.0.0-M4</version>
+        	<configuration>
+          		<suiteXmlFiles>
+            		<suiteXmlFile>XMLFiles/testng.xml</suiteXmlFile>
+          		</suiteXmlFiles>
+          		
+          		<systemPropertyVariables>
+          			<setupBrowser>${browser}</setupBrowser>
+          			<setupURL>${URL}</setupURL>
+          		</systemPropertyVariables>
+        	</configuration>
+      	</plugin>
+   </plugins>
+ </build>
 
   <dependencies>
 		<dependency>
